# financial-analytics

./: README.md
CRM/: README.md
CRM/interaction_analysis/santander_customer_transaction/: README.md  notebook.ipynb
Fraud_analysis/: README.md
Fraud_analysis/transaction_fraud_detection/analysis/: model.py
Fraud_analysis/transaction_fraud_detection/app/: .gitignore  README.md  app.py  install.sh
Investments/: README.md
Investments/stock-predict/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Investments/stock-predict/notebooks/: nvdia-analysis.ipynb
Investments/stock-predict/src/controllers/: prediction_controller.py
Investments/stock-predict/src/main/: process_handle.py
Investments/stock-predict/src/main/constructor/: dashboard_constructor.py  prediction_constructor.py
Investments/stock-predict/src/models/: data_models.py  graphs_models.py  prediction_models.py
Investments/stock-predict/src/views/: dashboard_view.py  prediction_view.py
credit_cards/: README.md
